fixed partners page on bizopt

--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -67,16 +67,19 @@
                 <div class="uk-text-center">
                     <h2>Сотрудничество с BeFreela</h2>
                 </div>
-                <div class="uk-card uk-card-default uk-border-rounded" style="width:50%; margin: 0 auto; padding: 3%;">
-                    <div class="uk-card-header" style="border:none; padding-bottom: 0;">
+                <div class="uk-card uk-card-default uk-border-rounded" style="width: 50%; margin: 0 auto; padding: 3%;">
+                    <div class="uk-card-header" style="border:none;">
                         <div class="uk-grid-small uk-flex-middle" uk-grid>
                             <div class="uk-width-expand">
-                                <h3 class="uk-card-title uk-text-bold uk-text-break uk-margin-remove-bottom">Войти или
-                                    создать профиль</h3>
+                                <h3 class="uk-card-title uk-text-center uk-text-bold uk-text-break">Добро пожаловать в партнерскую программу BeFreela</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="uk-card-body" style="padding-bottom: 0px; padding-top: 2%; text-align: center">
+                    <div class="uk-width-1-1 uk-text-center">
+                        <br>
+                            <a href="https://befreela.partners.ru/" class="uk-width-1 uk-button uk-button-secondary uk-border-rounded" style="margin: 0 auto; font-size: large;background-color: purple">Зарегестрироваться</a>
+                    </div>
+                    <!-- <div class="uk-card-body" style="padding-bottom: 0px; padding-top: 2%; text-align: center">
                         <label for="phonenumber" class="uk-text-muted">Контактный телефон</label>
                         <div class="uk-inline uk-width-1">
                             <select class="uk-select uk-width-1-5" id="phoneCode"
@@ -104,7 +107,7 @@
                                 disabled>Получить
                                 код</button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
     </section>
