added documents page

--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -1,4 +1,4 @@
-<div style="margin: 0 auto; width: 80%; position: fixed; top: 0; left: 10%; z-index: 1000; ">
+<div id="topmenu" style="margin: 0 auto; width: 80%; position: fixed; top: 0; left: 10%; z-index: 1000; ">
     {% if user.is_authenticated %}
     <div class="uk-flex uk-flex-between" style="padding: 15px 10% 5px 10%; background-color:rgba(255, 255, 255, 0.9)">
 
