--- a/bizopt/BO/templates/base.html
+++ b/bizopt/BO/templates/base.html
@@ -22,7 +22,7 @@
 
 
     {% block content %} {% endblock %}
-    <style type="text/css">
+    <!-- <style type="text/css">
         .main_header {
             padding-left: 30%;
             font-size: 60px;
@@ -40,7 +40,7 @@
         .color_menu {
             background-color: #343a40;
         }
-    </style>
+    </style> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
