minor fix of progress bar in pertners -> signin

--- a/partner/Part/templates/index.html
+++ b/partner/Part/templates/index.html
@@ -39,7 +39,7 @@
                 </li>
                 <li class="Btn uk-text-center uk-margin-small-top">
                     <button class="uk-button uk-button-text uk-width-1"
-                        style="margin: 0 auto; padding-bottom: 10px; font-size: 20px; text-transform: lowercase; font-size: 20px; border-bottom: 1px solid">Информация
+                    style="margin: 0 auto; padding-bottom: 10px; font-size: 20px; text-transform: lowercase; font-size: 20px; border-bottom: 1px solid gray">Информация
                         о продавцe</button>
                 </li>
 
