--- a/partner/Part/templates/signin.html
+++ b/partner/Part/templates/signin.html
@@ -12,6 +12,10 @@
     <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <style>
+        * {
+            transition: 0.2s;
+        }
+
         #regForm {
             margin: 0px auto;
             padding: 40px;
@@ -33,7 +37,6 @@
             align-items: center;
             text-align: center;
             margin: 30px auto;
-            padding: 0px -5px;
             width: 50%;
             height: 5px;
             border-top: 1px solid;
@@ -42,13 +45,14 @@
         }
 
         .all-steps::after {
+            border-radius: 200px;
             background-color: rgb(50, 50, 255);
             content: '\A';
             position: absolute;
             top: 0;
             bottom: 0;
             left: 0;
-            width: var(--width-nonstatic, 25%);
+            width: var(--width-nonstatic);
             z-index: -1;
         }
 
@@ -57,7 +61,8 @@
             width: 20px;
             margin: 0px;
             background-color: #bbbbbb;
-            border: none;
+            border: 2px solid;
+            border-color: #bbbbbb;
             border-radius: 50%;
             display: flex;
             justify-content: center;
@@ -229,66 +234,70 @@
 
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
-<script type='text/Javascript'>
+<script>
     let currentTab = 0;
     let progressBar = document.querySelector(".all-steps");
-document.addEventListener("DOMContentLoaded", function(event) {
-    progressBar.style.setProperty("--width-nonstatic", `25%`);
-    showTab(currentTab);
-});
+    document.addEventListener("DOMContentLoaded", function (event) {
+        progressBar.style.setProperty("--width-nonstatic", '20%');
+        showTab(currentTab);
+    });
 
-function showTab(n) {
-    let x = document.getElementsByClassName("tab");
-    x[n].style.display = "block";
-    if (n === 0) {
-        document.getElementById("prevBtn").style.display = "none";
-    } else {
-        document.getElementById("prevBtn").style.display = "inline";
-    }
-    if (n === (x.length - 1)) {
-        document.getElementById("nextBtn").innerHTML = "Далее";
-    } else {
-        document.getElementById("nextBtn").innerHTML = "Далее";
-    }
-    fixStepIndicator(n)
-}
-
-function nextPrev(n) {
-    let x = document.getElementsByClassName("tab");
-    x[currentTab].style.display = "none";
-    currentTab = currentTab + n;
-    if (currentTab === x.length) {
-        document.getElementById('nextBtn').type = "submit"
-    }
-    showTab(currentTab);
-}
-
-function surTab(n) {
-    let x = document.getElementsByClassName("tab");
-    x[currentTab].style.display = "none";
-    currentTab = n;
-    showTab(currentTab);
-}
-
-function fixStepIndicator(n) {
-    let i, x = document.getElementsByClassName("step");
-
-    if (n != x.length - 1) {
-        progressBar.style.setProperty("--width-nonstatic", `${(n+1) * 20}%`);
-    } else {
-        progressBar.style.setProperty("--width-nonstatic", "100%");
+    function showTab(n) {
+        let x = document.getElementsByClassName("tab");
+        x[n].style.display = "block";
+        if (n === 0) {
+            document.getElementById("prevBtn").style.display = "none";
+        } else {
+            document.getElementById("prevBtn").style.display = "inline";
+        }
+        if (n === (x.length - 1)) {
+            document.getElementById("nextBtn").innerHTML = "Далее";
+        } else {
+            document.getElementById("nextBtn").innerHTML = "Далее";
+        }
+        fixStepIndicator(n)
     }
 
-    x[n].style.backgroundColor = '#ffa500'; //color for n
-
-    for (i = 0; i < n; i++) { // color for every before n
-        x[i].style.backgroundColor = '#2652bf';
+    function nextPrev(n) {
+        let x = document.getElementsByClassName("tab");
+        x[currentTab].style.display = "none";
+        currentTab = currentTab + n;
+        if (currentTab === x.length) {
+            document.getElementById('nextBtn').type = "submit"
+        }
+        showTab(currentTab);
     }
 
-    for (i = n + 1; i < x.length; i++){ // color for every after n
-        x[i].style.backgroundColor = '#bbbbbb';
+    function surTab(n) {
+        let x = document.getElementsByClassName("tab");
+        x[currentTab].style.display = "none";
+        currentTab = n;
+        showTab(currentTab);
     }
-}
+
+    function fixStepIndicator(n) {
+        let i, x = document.getElementsByClassName("step");
+
+        if (n != x.length - 1) {
+            progressBar.style.setProperty("--width-nonstatic", `${(n+1) * 20}%`);
+        } else {
+            progressBar.style.setProperty("--width-nonstatic", "100%");
+        }
+
+        x[n].style.backgroundColor = '#ffa500';
+        x[n].style.borderColor = '#ffa500';
+        //color for n
+
+        for (i = 0; i < n; i++) { // color for every before n
+            x[i].style.backgroundColor = '#ffffff';
+            x[i].style.borderColor = '#2652bf';
+        }
+
+        for (i = n + 1; i < x.length; i++) { // color for every after n
+            x[i].style.backgroundColor = '#bbbbbb';
+            x[i].style.borderColor = '#bbbbbb';
+        }
+    }
 </script>
 
 </html>
