fixed error logs

--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -10,7 +10,7 @@
     <div>
         <nav class="uk-navbar-container" uk-navbar
             style="background: rgba(255, 255, 255, 0.9); border-bottom-left-radius: 10px; border-bottom-right-radius: 10px">
-            <div class="uk-navbar-left">
+            <div class="uk-navbar-left uk-width-2-5@l">
                 <ul class="uk-navbar-nav">
                     <li class="uk-active"><a href="#main-menu" class="" uk-toggle uk-icon="menu"></a></li>
 
@@ -383,7 +383,7 @@
                 </li>
             </ul>
         </div>
-        <div class="uk-navbar-right">
+        <div class="uk-navbar-right uk-width-3-5@l">
             <div class="uk-search uk-search-default">
                 <a type="submit" href="" id="searchBtn" uk-search-icon></a>
                 <input class="uk-search-input uk-border-rounded" type="search" placeholder="Search" id="search_pole">
@@ -401,3 +401,10 @@
     </nav>
     {% endif %}
 </div>
+
+<style>
+    svg{
+        width: 25px;
+        height: 25px;
+    }
+</style>
