80% width to all pages settings in template1.html(partner)

--- a/bizopt/BO/templates/addTask.html
+++ b/bizopt/BO/templates/addTask.html
@@ -3,12 +3,12 @@
 
 
 
-<div class="uk-flex">
+<div class="uk-flex" style="width: 80%; margin: auto; margin-top: 7%; margin-bottom: 5%">
     <div>
         <div class="uk-margin-medium-top uk-margin-medium-left uk-margin-medium-bottom">
             <a>
                 <div class="uk-flex uk-">
-                    <img  width="40px" height="40px" src="https://cdn-icons-png.flaticon.com/512/545/545680.png">
+                    <img  width="40px" height="30px" src="https://cdn-icons-png.flaticon.com/512/545/545680.png">
                     <h2 class="uk-margin-remove">К задачам</h2>
                 </div>
             </a>
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <div>
-                            <button style="width: 100%; border-radius: 5px; background: #C4C4C4; " type="submit" name="addtask" id="submit_button" disabled>Опубликовать</button>
+                            <button style="width: 100%; border-radius: 5px;" type="submit" class="uk-button-default" name="addtask" id="submit_button" disabled>Опубликовать</button>
                         </div>
                     </div>
             </form>
