--- a/bizopt/BO/templates/creators.html
+++ b/bizopt/BO/templates/creators.html
@@ -478,6 +478,7 @@
     }
 </style>
 
+<body style="margin: auto; margin-top: 7%">
 <div id="carouselExampleSlidesOnly" class="carousel slide smallPad" data-bs-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
@@ -515,6 +516,7 @@
 </div>
 <br>
 <br>
+</body>
 
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
