--- a/bizopt/BO/templates/documents.html
+++ b/bizopt/BO/templates/documents.html
@@ -9,6 +9,7 @@
         transition: 0.2s;
     }
 </style>
+<body style="margin: auto; margin-top: 7%">
 <div class="uk-position-left uk-width-1">
 
     <div class="uk-card uk-card-default uk-card-body uk-width-1-5@s" style="height: 100%;">
@@ -87,6 +88,7 @@
     </div>
 
 </div>
+</body>
 <!-- Section: Links  -->
 
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
