--- a/bizopt/BO/templates/goodsSearch.html
+++ b/bizopt/BO/templates/goodsSearch.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<body>
+<body style="margin: auto; margin-top: 7%">
 <div class="uk-margin-large-left uk-margin-medium-top uk-flex">
     <div style="width: 20%">
             <div class="uk-margin-small-left">
