--- a/bizopt/BO/templates/parentReg.html
+++ b/bizopt/BO/templates/parentReg.html
@@ -117,7 +117,7 @@
     </style>
 </head>
 
-<body class='snippet-body'>
+<body class='snippet-body' style="80%; margin: auto; margin-top: 7%">
     <div class="container mt-5">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-md-8">
