--- a/bizopt/BO/templates/tasks.html
+++ b/bizopt/BO/templates/tasks.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %}
-
+<body style="width: 80%; margin: auto; margin-top: 7%">
 <div class="uk-flex-column">
     <div style="width: 50%; margin: auto">
         <div class="uk-margin-large-bottom">
@@ -87,7 +87,7 @@
 <!--    </form>-->
 <!--</div>-->
 
-
+</body>
 <style>
     .textSize {
         font-size: 24px;
