--- a/bizopt/BO/templates/base.html
+++ b/bizopt/BO/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.10/dist/css/uikit.min.css" />
 </head>
 
-<body style="width: 100%; height: 100%">
+<body style=" height: 100%">
 
 
     {% include "menu.html" %}
