--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <!-- SUB MENU -->
+<div style="width: 80%; margin: auto; margin-top: 7%">
 <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
     <nav class="uk-navbar-container" uk-navbar
         style="position: relative; z-index: 980; padding: 0 10%; background-color: #f8f8f8 !important; height: 4%;">
@@ -448,6 +449,7 @@
             </div> 
         </div>
     </container>
+</div>
 </div>
 </div>
 </div>
