--- a/bizopt/BO/templates/editTask.html
+++ b/bizopt/BO/templates/editTask.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<body style="margin: auto; margin-top: 7%">
 <br>
 
 
@@ -52,6 +53,7 @@
         </form>
     </div>
 </div>
+</body>
 
 
 <style>
