--- a/bizopt/BO/templates/forgotPassword.html
+++ b/bizopt/BO/templates/forgotPassword.html
@@ -117,7 +117,7 @@
     </style>
 </head>
 
-<body oncontextmenu='return false' class='snippet-body'>
+<body oncontextmenu='return false' class='snippet-body' style="margin: auto; margin-top: 7%">
 
     <div class="container mt-5">
         <div class="row d-flex justify-content-center align-items-center">
