--- a/bizopt/BO/templates/goods.html
+++ b/bizopt/BO/templates/goods.html
@@ -8,8 +8,8 @@
 
 </head>
 
-<body>
-<div class="uk-margin-large-left uk-margin-medium-top uk-flex">
+<body style="margin: auto; margin-top: 7%">
+<div class="uk-margin-large-left uk-margin-medium-top uk-flex" style="width: 80%; margin: auto;">
     <div style="width: 20%; height: 100%;">
             <div class="uk-margin-small-left">
                 <h4 class="uk-margin-small-bottom">Электроника - Смартфоны</h4>
