--- a/bizopt/BO/templates/messanger.html
+++ b/bizopt/BO/templates/messanger.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
@@ -14,7 +13,8 @@
 </head>
 
 
-<body style="height: 100%;">
+<body>
+<div style="height: 100%; margin: auto; margin-top: 10%; width: 80%">
     <!-- <form action="GET"> -->
     <div class="uk-card uk-card-default uk-width-2-3 uk-border-rounded uk-margin uk-position-bottom"
         style="margin: 5% auto; height: 85%; ">
@@ -115,7 +115,7 @@
 
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
-
+</div>
 </body>
 
 <script type="text/javascript">
