--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-
+<body>
+<div style="width: 80%; margin: 10% auto;">
 <div class="placeOut uk-flex-column">
     <h1>Корзина</h1>
     <p>Здесь вы можете отследить статус текущих заказов</p>
@@ -194,6 +195,9 @@
     </form>
     </div>
 </div>
+</div>
+</body>
+
 
 
 
