--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -40,7 +40,7 @@
     }
 </style>
 
-<body>
+<body style="width:80%;margin: auto; margin-top: 7%">
     <section style="padding: 0 0 10px" clss="uk-card-body" id="header">
         <nav uk-sticky="start: 200; animation: uk-animation-slide-top; sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; cls-inactive: uk-navbar-transparent uk-dark"
             class="uk-navbar-container" uk-navbar style="color: black; padding: 0 5%;">
