--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -15,7 +15,7 @@
 		trasform: 0.5s;	
 	}
 </style>
-<body oncontextmenu='return false' class='snippet-body'>
+<body oncontextmenu='return false' class='snippet-body' style="width: 80%; margin: auto; margin-top: 7%">
 	<div class="container" style="margin-top: 5%">
 		<h1 style="font-size:30px; text-align: center; ">Добро пожаловать в</h1>
 		<h1 style="text-align: center; margin-top: 2%">BeFreela</h1>
