--- a/bizopt/BO/templates/yourTasks.html
+++ b/bizopt/BO/templates/yourTasks.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<body style="width: 80%; margin: auto; margin-top: 7%">
 <div class="uk-flex">
     <div style="margin-left: 15%;" class="uk-margin">
         <div class=" uk-margin-medium-top uk-margin-medium-bottom" style="">
@@ -65,6 +66,8 @@
             <a href="#" class="uk-button" style="background-color: #E5E5E5; display: block;  text-align:center">Чаты</a>
         </div>
 </div>
+</div>
+</body>
 
 {% endblock %}
 
