--- a/partner/Part/templates/signin.html
+++ b/partner/Part/templates/signin.html
@@ -93,10 +93,21 @@
                         <br>
                         <div class="uk-width-1-1 uk-flex uk-flex-between">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
+                                {{form.username.label}}: {{form.username}}
+                            </div>
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
                                 {{form.email.label}}: {{form.email}}
                             </div>
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
+                                {{form.first_name.label}}: {{form.first_name}}
+                            </div>
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
+                                {{form.last_name.label}}: {{form.last_name}}
+                            </div>
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
                                 {{form.password1.label}}: {{form.password1}}</div>
+                                {{form.password2.label}}: {{form.password2}}</div>
+
                         </div>
                     </div>
 
@@ -128,10 +139,11 @@
                                     <option value="Физлицо">Физлицо</option>
                                 </select>
                             </div>
-                            <div style="display: inline-block; margin: 0 10px" class="uk-width-3-5">
-                                <label> Название организации ???? </label>
-                                <br>
-                                <input class="uk-input" type="text" placeholder="Введите название организзации">
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
+                                {{form.name_small.label}}: {{form.name_small}}
+                            </div>
+                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
+                                {{form.nameFull.label}}: {{form.nameFull}}
                             </div>
                         </div>
 
@@ -178,6 +190,9 @@
                         <div class="uk-width-1-1 uk-flex uk-flex-between">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-4">
                                 {{form.payment_account.label}}: {{form.payment_account}}
+                            </div>
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-4">
+                                {{form.reg_form.label}}: {{form.reg_form}}
                             </div>
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-4">
                                 {{form.bik.label}}: {{form.bik}}
