--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -34,7 +34,7 @@
             </div>
             <ul class="uk-navbar-nav">
                 <li class="uk-active">
-                    <a href="/seller.befreela/" uk-icon="icon: bag"></a>
+                    <a href="/partners/" uk-icon="icon: bag"></a>
                 </li>
                 <li class="uk-active">
                     <a href="/orders/" uk-icon="icon: cart"></a>
