--- a/bizopt/BO/templates/tasks.html
+++ b/bizopt/BO/templates/tasks.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% block content %}
-<body style="width: 80%; margin: auto; margin-top: 7%">
-<div class="uk-flex-column">
-    <div style="width: 50%; margin: auto">
-        <div class="uk-margin-large-bottom">
+<body>
+<div class="uk-flex-column" style="width: 80%; margin: 10% auto;">
+    <div>
+        <div class="uk-margin-large-bottom uk-widht-1 uk-text-center">
             <h1>Задачи</h1>
         </div>
         <div class="uk-flex-column">
@@ -88,20 +88,6 @@
 <!--</div>-->
 
 </body>
-<style>
-    .textSize {
-        font-size: 24px;
-    }
-    .buttonStyle {
-        background: #C4C4C4;
-        height: 10%;
-    }
-    .smallText {
-        font-size: 12px;
-        color: green;
-    }
-</style>
-
 
 
 
