--- a/partner/Part/templates/signin.html
+++ b/partner/Part/templates/signin.html
@@ -12,10 +12,6 @@
     <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <style>
-        * {
-            transition: 0.2s;
-        }
-
         input{
             border-radius: 5px!important;
         }
@@ -73,6 +69,7 @@
             align-items: center;
             font-size: 15px;
             opacity: 1;
+            transition: 0.2s;
         }
     </style>
 </head>
@@ -86,54 +83,54 @@
                     <a class="step" onclick="surTab(1)"></a>
                     <a class="step" onclick="surTab(2)"></a>
                     <a class="step" onclick="surTab(3)"></a>
-                    <a class="step" onclick="surTab(4)"></a>
+                    <!-- <a class="step" onclick="surTab(4)"></a> -->
                 </div>
-                <form id="regForm" action="/signin/" method="POST">
+                <form id="regForm" class="uk-width-4-5" action="/signin/" method="POST">
 
                     <div class="tab">
                         <h2 class="uk-text-center">Главная информация</h2>
                         <h4 class="uk-text-center">Запомните введеные поля, они понадобяться вам для входа в аккаунт
                         </h4>
                         <br>
-                        <div class="uk-width-1 uk-flex uk-flex-center" style="padding: 2% auto">
-                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2 uk-text-center">
+                        <div class="uk-width-3-5 uk-flex uk-flex-center" style="margin: 5px auto">
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-2-3 uk-text-center">
                                 {{form.username.label}}: <br> {{form.username}}
                             </div>
-                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2 uk-text-center">
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-2-3 uk-text-center">
                                 {{form.email.label}}: <br> {{form.email}}
                             </div>
                         </div>
                         <br>
-                        <div class="uk-width-1 uk-flex uk-flex-center" style="padding: 2% auto">
-                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2 uk-text-center">
+                        <div class="uk-width-3-5 uk-flex uk-flex-center" style="margin: 5px auto">
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-2-3 uk-text-center">
                                 {{form.first_name.label}}: <br> {{form.first_name}}
                             </div>
-                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2 uk-text-center">
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-2-3 uk-text-center">
                                 {{form.last_name.label}}: <br> {{form.last_name}}
                             </div>
                         </div>
                         <br>
-                        <div class="uk-width-1 uk-flex uk-flex-center" style="padding: 2% auto">
-                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2 uk-text-center">
+                        <div class="uk-width-3-5 uk-flex uk-flex-center" style="margin: 5px auto">
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-2-3 uk-text-center">
                                 {{form.password1.label}}: <br> {{form.password1}}
                             </div>
-                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2 uk-text-center">
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-2-3 uk-text-center">
                                 {{form.password2.label}}: <br> {{form.password2}}
                             </div>
                         </div>
                         <br>
-                        <div class="uk-width-1 uk-flex uk-flex-center" style="padding: 2% auto">
-                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2 uk-text-center">
+                        <div class="uk-width-3-5 uk-flex uk-flex-center" style="margin: 5px auto">
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-2-3 uk-text-center">
                                 {{form.phone.label}}: <br> {{form.phone}}
                             </div>
-                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2 uk-text-center">
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-2-3 uk-text-center">
                                 {{form.city.label}}: <br> {{form.city}}
                             </div>
                         </div>
 
                     </div>
 
-                    <div class="tab">
+                    <!-- <div class="tab">
                         <h2 class="uk-text-center">Название магазина</h2>
                         <h4 class="uk-text-center">Выбери уникальное название магазина, который отражает твой стиль</h4>
                         <br>
@@ -144,13 +141,13 @@
                             <button class="uk-button uk-button-default" style="font-size: 13px">Проверить на
                                 уникальность</button>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="tab">
                         <h2 class="uk-text-center">Юредические данные</h2>
                         <h4 class="uk-text-center">Введите данные</h4>
                         <br>
-                        <div class="uk-width-1-1 uk-flex uk-flex-between">
+                        <div class="uk-width-3-5 uk-flex uk-flex-between" style="margin: 0 auto">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-3">
                                 <label> Тип </label>
                                 <br>
@@ -171,7 +168,7 @@
 
                         <br>
 
-                        <div class="uk-width-1-1 uk-flex uk-flex-between">
+                        <div class="uk-width-3-5 uk-flex uk-flex-between" style="margin: 0 auto">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1-4">
                                 {{form.ogrn.label}}: {{form.ogrn}}
                             </div>
@@ -185,7 +182,7 @@
 
                         <br>
 
-                        <div class="uk-width-1-1 uk-flex uk-flex-between">
+                        <div class="uk-width-3-5 uk-flex uk-flex-between" style="margin: 0 auto">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-1">
                                 {{form.street.label}}: {{form.street}}
                             </div>
@@ -193,7 +190,7 @@
 
                         <br>
 
-                        <div class="uk-width-1-1 uk-flex uk-flex-between">
+                        <div class="uk-width-3-5 uk-flex uk-flex-between" style="margin: 0 auto">
                             <div style="display: inline-block; margin: 0 10px" class="uk-width-3-5">
                                 {{form.fiz_adress.label}}: {{form.fiz_adress}}
                             </div>
@@ -233,17 +230,17 @@
                         <h2 class="uk-text-center">Подтвердите почту</h2>
                         <h4 class="uk-text-center">Выбери уникальное название магазина, который отражает твой стиль</h4>
                         <br>
-                        <div class="uk-width-1-1 uk-flex uk-flex-center">
+                        <div class="uk-width-4-5 uk-flex uk-flex-center" style="margin: 0 auto">
                             <div style="display: inline-block; margin: 0 10px; border: 1px solid; padding: 5%;"
                                 class="uk-width-4-5 uk-border-rounded">
-                                <p>На вашу почту <b>user.email</b> пришло письмо для подтверждения </p>
+                                <p>На вашу почту пришло письмо для подтверждения </p>
                                 <p>перед тем как продолжить создание магазина</p>
                                 <button class="uk-button uk-button-default uk-margin-small-bottom"
                                     style="text-transform: none;background-color: #e4e4e4">Отправить еще раз</button>
                                 <br>
                                 <button class="uk-button uk-button-text" style="text-transform: none;">Изменить
                                     почту</button>
-                                <div class="uk-width-1 uk-flex uk-flex-center" style="padding: 2% auto">
+                                <div class="uk-width-4-5 uk-flex uk-flex-center" style="margin: 5px auto">
                                     <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2 uk-text-center">
                                         {{form.checking_account.label}}: <br> {{form.checking_account}}
                                     </div>
@@ -252,8 +249,6 @@
                             </div>
                         </div>
                     </div>
-
-
                     <br>
                     <br>
                     <div style="overflow:auto;" id="next-previous">
@@ -325,7 +320,7 @@
         let i, x = document.getElementsByClassName("step");
 
         if (n != x.length - 1) {
-            progressBar.style.setProperty("--width-nonstatic", `${(n+1) * 20}%`);
+            progressBar.style.setProperty("--width-nonstatic", `${(n+1) * 25}%`);
         } else {
             progressBar.style.setProperty("--width-nonstatic", "100%");
         }
