rebased bizopt menu page

--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -5,7 +5,7 @@
         <a href="#main-menuL" uk-icon="menu" uk-toggle></a>
         <p style="margin: 0px"> Регион <b>Москва</b></p>
     </div>
-    <a href="/becomeCreator" class="uk-button uk-button-text" style="text-transform: none; font-size: medium;">Стать
+    <a href="/http://seller.befreela.ru/start/" class="uk-button uk-button-text" style="text-transform: none; font-size: medium;">Стать
         партнером</a>
 </div>
 <div style="width: 100%; border-top: 2px solid; border-radius: 20px;"></div>
@@ -34,7 +34,7 @@
             </div>
             <ul class="uk-navbar-nav">
                 <li class="uk-active">
-                    <a href="/partners/" uk-icon="icon: bag"></a>
+                    <a href="http://seller.befreela.ru/" uk-icon="icon: bag"></a>
                 </li>
                 <li class="uk-active">
                     <a href="/orders/" uk-icon="icon: cart"></a>
