--- a/bizopt/BO/templates/menusTemplates/mediumTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/mediumTemplate.html
@@ -22,7 +22,7 @@
         <div class="uk-navbar-right">
             <ul class="uk-navbar-nav">
                 <li class="uk-active">
-                    <a href="/partners/" uk-icon="icon: bag"></a>
+                    <a href="http://seller.befreela.ru//" uk-icon="icon: bag"></a>
                 </li>
                 <li class="uk-active">
                     <a href="/orders/" uk-icon="icon: cart"></a>
@@ -81,7 +81,7 @@
         </ul>
         <ul class="uk-nav uk-nav-secondary uk-nav-left uk-margin-auto-vertical">
             <p style="margin: 0px"> Регион <b>Москва</b></p>
-            <a href="/becomeCreator" class="uk-button uk-button-text"
+            <a href="http://seller.befreela.ru/start/" class="uk-button uk-button-text"
                 style="text-transform: none; font-size: medium;">Стать
                 партнером</a>
         </ul>
