--- a/bizopt/BO/templates/menusTemplates/smallTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/smallTemplate.html
@@ -34,7 +34,7 @@
                     <p class="uk-text-truncate" uk-tooltip="{{user.email}}">{{user.email}}</p>
                 </div>
                 <div class="uk-width-1 uk-flex uk-flex-middle uk-flex-center">
-                    <a style="margin: 0 5%" uk-tooltip="Партнерка" href="/partners/" uk-icon="icon: bag"></a>
+                    <a style="margin: 0 5%" uk-tooltip="Партнерка" href="http://seller.befreela.ru//" uk-icon="icon: bag"></a>
                     <a style="margin: 0 5%" uk-tooltip="Корзина" href="/orders/" uk-icon="icon: cart"></a>
                 </div>
             </li>
@@ -74,7 +74,7 @@
         </ul>
         <ul class="uk-nav uk-nav-secondary uk-nav-left uk-margin-auto-vertical">
             <p style="margin: 0px"> Регион <b>Москва</b></p>
-            <a href="/becomeCreator" class="uk-button uk-button-text"
+            <a href="http://seller.befreela.ru/start/" class="uk-button uk-button-text"
                 style="text-transform: none; font-size: medium;">Стать
                 партнером</a>
         </ul>
