--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -5,7 +5,7 @@
         <a href="#main-menuL" uk-icon="menu" uk-toggle></a>
         <p style="margin: 0px"> Регион <b>Москва</b></p>
     </div>
-    <a href="/http://seller.befreela.ru/start/" class="uk-button uk-button-text" style="text-transform: none; font-size: medium;">Стать
+    <a href="http://seller.befreela.ru/start/" class="uk-button uk-button-text" style="text-transform: none; font-size: medium;">Стать
         партнером</a>
 </div>
 <div style="width: 100%; border-top: 2px solid; border-radius: 20px;"></div>
