--- a/bizopt/BO/templates/menusTemplates/mediumTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/mediumTemplate.html
@@ -22,7 +22,7 @@
         <div class="uk-navbar-right">
             <ul class="uk-navbar-nav">
                 <li class="uk-active">
-                    <a href="http://seller.befreela.ru//" uk-icon="icon: bag"></a>
+                    <a href="http://seller.befreela.ru/" uk-icon="icon: bag"></a>
                 </li>
                 <li class="uk-active">
                     <a href="/orders/" uk-icon="icon: cart"></a>
