--- a/bizopt/BO/templates/menusTemplates/smallTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/smallTemplate.html
@@ -34,7 +34,7 @@
                     <p class="uk-text-truncate" uk-tooltip="{{user.email}}">{{user.email}}</p>
                 </div>
                 <div class="uk-width-1 uk-flex uk-flex-middle uk-flex-center">
-                    <a style="margin: 0 5%" uk-tooltip="Партнерка" href="http://seller.befreela.ru//" uk-icon="icon: bag"></a>
+                    <a style="margin: 0 5%" uk-tooltip="Партнерка" href="/" uk-icon="icon: bag"></a>
                     <a style="margin: 0 5%" uk-tooltip="Корзина" href="/orders/" uk-icon="icon: cart"></a>
                 </div>
             </li>
