--- a/partner/Part/templates/registration/login.html
+++ b/partner/Part/templates/registration/login.html
@@ -40,7 +40,7 @@
 		}
 
 		.tab input:focus {
-			border: 1px solid #6a1b9a !important;
+			border: 1px solid #0040ff !important;
 			outline: none
 		}
 
@@ -49,7 +49,7 @@
 		}
 
 		button {
-			background-color: #6A1B9A;
+			background-color: #0040ff;
 			color: #ffffff;
 			border: none;
 			border-radius: 50%;
@@ -91,7 +91,7 @@
 			justify-content: center;
 			align-items: center;
 			font-size: 15px;
-			color: #6a1b9a;
+			color: #0040ff;
 			opacity: 0.5
 		}
 
@@ -101,7 +101,7 @@
 
 		.step.finish {
 			color: #fff;
-			background: #6a1b9a;
+			background: #0040ff;
 			opacity: 1
 		}
 
@@ -123,7 +123,7 @@
 		<div class="row d-flex justify-content-center align-items-center">
 			<div class="col-md-8">
 				<form method="post" id="regForm" action="{% url 'login' %}">
-					<h1 id="redistration"> Login here</h1>
+					<h1 id="redistration"> Добро пожаловать в BeFreela Partners</h1>
 					<div class="all-steps" id="all-steps">
 						<a href="">
 							<span class="step">
