--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -2,13 +2,10 @@
     {% include "menusTemplates/largeTemplate.html" %}
 </div>
 
-<div class="uk-visible@m uk-hidden@l" id="topmenu" style="width: 80%; position: fixed; top: 0; left: 10%; z-index: 1000;">
+<div class="uk-visible@m uk-hidden@l" id="topmenu" style="width: 80%; position: absolute; top: 2%; left: 10%; z-index: 1000;">
     {% include "menusTemplates/mediumTemplate.html" %}
 </div>
 
-<div class="uk-hidden@m" id="topmenu" style="width: 80%; position: absolute; top: 2%; left: 10%; z-index: 1000;">
-    {% include "menusTemplates/smallTemplate.html" %}
-</div>
 
 <style>
     svg{
