rebased bizopt index.html for smartphones

--- a/bizopt/BO/templates/base.html
+++ b/bizopt/BO/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.10/dist/css/uikit.min.css" />
 </head>
 
-<body class="uk-width-4-5@l uk-width-1@m" style="height: 100%; margin: 0 auto">
+<body class="uk-width-4-5@l uk-width-1@" style="height: 100%; margin: 0 auto">
 
 
     {% include "menu.html" %}
