--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 
-<div class="uk-position-relative uk-visible-toggle uk-light" style="width: 100%; margin: 15% auto 1% auto;" tabindex="-1"
-    uk-slideshow="min-height: 300; max-height: 400; animation: push" id="endstickness">
+<div class="uk-position-relative uk-visible-toggle uk-light" style="width: 100%; margin: 15% auto 1% auto;"
+    tabindex="-1" uk-slideshow="min-height: 300; max-height: 400; animation: push" id="endstickness">
 
     <ul class="uk-slideshow-items" style="border-radius: 10px;">
 
@@ -31,9 +31,9 @@
 
 
 <div class="uk-section uk-section-default" style="width: 100%; margin: 0 auto;">
-    <div class="uk-container uk-flex uk-flex-around" style="margin: 5% auto">
+    <div class="uk-container uk-flex uk-flex-around@l uk-flex-column" style="margin: 5% auto">
 
-        <div class="uk-width-2-5 uk-card uk-card-hover Дизайнерска_Одежда">
+        <div class="uk-width-2-5@l uk-width-4-5 uk-card uk-card-hover Дизайнерска_Одежда" style="margin: 2% auto">
             <div class="card-link Дизайнерска_Одежда">
                 <div class="uk-card uk-card-default  Дизайнерска_Одежда">
                     <div class="uk-card-body Дизайнерска_Одежда">
@@ -50,12 +50,8 @@
             </div>
         </div>
 
-        <div class="uk-width-2-5 uk-card uk-card-hover Сумки">
+        <div class="uk-width-2-5@l uk-width-4-5 uk-card uk-card-hover Сумки" style="margin: 2% auto">
             <div class="card-link Сумки">
-                <div class="uk-card-media-left uk-cover-container  Сумки">
-                    <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300"
-                        width="1800" height="1200" alt="">
-                </div>
                 <div class="Сумки">
                     <div class="uk-card-body Сумки" style="height: 100%">
                         <h3 class="uk-card-title">Сумки</h3>
@@ -64,19 +60,18 @@
                         <p style="margin: 2px auto">Дай волю фантазии и придумаю свою сумку</p>
                     </div>
                 </div>
-            </div>
-        </div>
-
-    </div>
-
-    <div class="uk-container uk-flex uk-flex-around" style="margin: 10% auto">
-
-        <div class="uk-width-2-5 uk-card uk-card-hover Скульптуры">
-            <div class="card-link Скульптуры">
-                <div class="uk-card-media-left uk-cover-container  Скульптуры">
+                <div class="uk-card-media-bottom uk-cover-container  Сумки">
                     <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300"
                         width="1800" height="1200" alt="">
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="uk-container uk-flex uk-flex-around@l uk-flex-column uk-margin-remove" style="margin: 10% auto">
+
+        <div class="uk-width-2-5@l uk-width-4-5 uk-card uk-card-hover Скульптуры" style="margin: 2% auto">
+            <div class="card-link Скульптуры">
                 <div class="Скульптуры">
                     <div class="uk-card-body Скульптуры">
                         <h3 class="uk-card-title">Скульптуры</h3>
@@ -85,11 +80,15 @@
                             себе
                             скульптуро по душе</p>
                     </div>
+                    <div class="uk-card-media-bottom uk-cover-container  Скульптуры">
+                        <img src="https://images.ctfassets.net/hrltx12pl8hq/7yQR5uJhwEkRfjwMFJ7bUK/dc52a0913e8ff8b5c276177890eb0129/offset_comp_772626-opt.jpg?fit=fill&w=800&h=300"
+                            width="1800" height="1200" alt="">
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="uk-width-2-5 uk-card uk-card-hover Интерьер">
+        <div class="uk-width-2-5@l uk-width-4-5 uk-card uk-card-hover Интерьер" style="margin: 2% auto">
             <div class="card-link Интерьер">
                 <div class="uk-card uk-card-default  Интерьер">
                     <div class="uk-card-body Интерьер">
@@ -219,12 +218,12 @@
 
     const cards = document.querySelectorAll('.card-link');
 
-        cards.forEach(card => {
-            card.addEventListener('click', function handleClick(event) {
-                console.log(event.target.parentNode.className)
+    cards.forEach(card => {
+        card.addEventListener('click', function handleClick(event) {
+            console.log(event.target.parentNode.className)
 
-            });
         });
+    });
 </script>
 
 {% endblock %}
