add smt to product_create

--- a/bizopt/BO/templates/becomeCreatorTemplates/template6.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template6.html
@@ -65,8 +65,13 @@
             <div class="tab" style="display: none">
 
                 <h2>Описание</h2>
-
                 {{ form8.description }}
+                <br>
+
+                <label>Категория</label> {{ form8.category }}
+                <br>
+
+                <label>Подкатегория</label> {{ form8.subcategory }}
                 <br>
 
                 <label>Ключевые слова</label>
