--- a/bizopt/BO/templates/menusTemplates/largeTemplate.html
+++ b/bizopt/BO/templates/menusTemplates/largeTemplate.html
@@ -110,7 +110,7 @@
                     обувь</a></li>
             <li class="uk-active"><a href="#bags-menuL" class="uk-button uk-button-text" uk-toggle>Сумки</a></li>
             <li class="uk-active"><a href="#interior-menuL" class="uk-button uk-button-text" uk-toggle>Интерьер</a></li>
-            <li class="uk-active"><a href="#decorations-menuL" class="uk-button uk-button-text" uk-toggle>Украшщения</a>
+            <li class="uk-active"><a href="#decorations-menuL" class="uk-button uk-button-text" uk-toggle>Украшения</a>
             </li>
             <li class="uk-active"><a href="#sculptures-menuL" class="uk-button uk-button-text" uk-toggle>Скульптуры</a>
             </li>
